[fix] Always show scrollbar to avoid flickering

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .json {
   pre {
     padding: 1em;
